# aya_discovery

./: README.org
firewall/: README.org
firewall-002/: config.yaml
firewall-002/firewall-002/: Cargo.toml
firewall-002/firewall-002-ebpf/src/: main.rs
firewall-002/firewall-002/src/: main.rs
firewall-002/xtask/src/: run.rs
firewall/firewall-002/firewall-002-ebpf/: Cargo.toml
firewall/firewall-003/: Cargo.toml  README.org  config.yaml
firewall/firewall-003/firewall-002/: Cargo.toml
firewall/firewall-003/firewall-002-common/: Cargo.toml
firewall/firewall-003/firewall-002/src/: main.rs
firewall/firewall-pin/: README.md
getting_started/: README.org
hello_world/: README.md  README.org  README2.md
hello_world/hello-world/: Cargo.toml  ebpf_dump_00.txt
hello_world/hello-world/hello-world/: Cargo.toml
hello_world/hello-world/hello-world-common/: Cargo.toml
packet_counter/xdp-map-counter/: Cargo.toml  README.md
packet_counter/xdp-map-counter/.vim/: coc-settings.json
packet_counter/xdp-map-counter/xdp-map-counter/: Cargo.toml
packet_counter/xdp-map-counter/xdp-map-counter-common/: Cargo.toml
packet_counter/xdp-map-counter/xdp-map-counter-ebpf/: Cargo.toml
xdp-firewall/: Cargo.toml  README.md  dump.txt
xdp-firewall-rest/: Cargo.toml  README.md
xdp-firewall-rest/client/: Cargo.toml
xdp-firewall-rest/server/: Cargo.toml
xdp-firewall-rest/server/src/: main.rs
xdp-firewall-rest/server/src/api/: api.rs  helpers.rs  mod.rs
xdp-firewall-rest/server/src/models/: fw.rs
xdp-firewall-rest/xdp-firewall/: Cargo.toml
xdp-firewall-rest/xdp-firewall-common/: Cargo.toml
xdp-firewall-rest/xdp-firewall-ebpf/: Cargo.toml
xdp-firewall-rest/xdp-firewall-ebpf/src/: main.rs
xdp-firewall-rest/xdp-firewall/src/: main.rs
xdp-firewall-rest/xtask/src/: build_ebpf.rs  run.rs
xdp-firewall/xdp-firewall/: Cargo.toml
xdp-firewall/xdp-firewall-rest/: Cargo.toml
xdp-firewall/xdp-firewall-rest/src/: main.rs
xdp-firewall/xdp-firewall-rest/src/api/: api.rs  helpers.rs
xdp-firewall/xdp-firewall-rest/src/models/: fw.rs  mod.rs
xdp-firewall/xdp-firewall-rest/src/repository/: database.rs
xdp-firewall/xdp-firewall/src/: main.rs
xdp_pass/: README.md  README.org  xdp_pass.c
xdp_pass/hello-world/: README.md
xdp_pass/xdp-pass/: Cargo.toml  README.md
xdp_pass/xdp-pass/xtask/src/: run.rs  (+1 more)
(+23 files in other folders)
