[package]
name = "xdp-firewall"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
xdp-firewall-common = { path = "../xdp-firewall-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
# actix-web = "4.8.0"
# chrono = { version = "0.4.38", features = ["serde"] }
# serde = { version = "1.0.203", features = ["derive"] }
# uuid = { version = "1.9.1", features = ["v4"] }


[[bin]]
name = "xdp-firewall"
path = "src/main.rs"
