[package]
name = "firewall-002"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
firewall-002-common = { path = "../firewall-002-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
figment = { version = "0.10.18", features = ["yaml", "env"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "firewall-002"
path = "src/main.rs"
